make mobile responsive

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="slider-tooltip" id="sliderTooltip">clips</div>
           </div>
 
-          <div>200+</div>
+          <div class="slidernumber">200+</div>
         </div>
       </div>
 
